# rust-vulkan

./: .gitignore  Cargo.toml  README.md
shaders/: frag.spv  vert.spv
src/: main.rs  vulkanapp.rs
src/World/: Block.rs  Chunk.rs  mod.rs
src/shaders/: shader.frag  shader.vert
src/vulkanapp/: mod.rs  resourceManager.rs  vertex.rs
