[package]
name = "rust-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.2", features = ["loaded"]}
glfw = {version = "0.49.1", features = ["vulkan"]}
rand = "0.8.5"

[profile.release]
debug-assertions = true